--- a/css-codegen-backend/.env
+++ b/css-codegen-backend/.env
@@ -1,2 +1,4 @@
-OLLAMA_HOST=http://127.0.0.1:11434
-OLLAMA_MODEL=llama3:8b
+FRONTEND_URL=*
+PORT=5050
+OLLAMA_HOST=http://ollama:11434
+OLLAMA_MODEL=tinyllama
